# PROJECTS-ASSIGNMENTS

./: ML_project.ipynb  TSA_project.ipynb  hybrid-neuro-symbolic-ai-for-olympiad-maths.ipynb  industrial_ml.csv  sales_forecast.csv
ML project with web link/: ML.ipynb  app.py  linear_regression_model.pkl
Projects/: Client.csv  DL.ipynb  DL_project.ipynb  LLM.ipynb  ML.ipynb  ML_project.ipynb  TSA.ipynb  house_price.csv
Week-18_ AI Agents/: 1)Openai_Multi-Agent_Conversation_and_Stand-up_Comedy.ipynb  1)RetrivalBasedTwoAgents_openai.ipynb  1.TwoAgents_Openai.ipynb  1_OpenAI_Reflection_and_Blogpost_Writing.ipynb  1_Openai_Customer_Onboarding_Sequential.ipynb  2)Gemini_Multi-Agent_Conversation_and_Stand-up.ipynb  2)RetrivalBasedTwoAgents_Gemini.ipynb  2.TwoAgents_Gemini.ipynb  2_Gemini_Customer_Onboarding_Sequential.ipynb  2_Gemini_Reflection_and_Blogpost_Writing.ipynb  3)RetrivalBasedTwoAgents_Ollama.ipynb  3)lLama_Multi-Agent_Conversation_with_Termination.ipynb  3.TwoAgents_Ollama.ipynb  3_Ollama_Customer_Onboarding_Sequential.ipynb  3_Ollama_Reflection_and_Blogpost_Writing.ipynb  ScenarioBasedAns.docx  ScenarioBasedAnswer.docx  illama config.ipynb  websiteleadchatgptapi-a46f50ae1507.json
Week-19-AWS-Sagemaker AI/: aws.py  output.txt
Week10-MySQL/: ScenarioBasedAns-1.docx  ScenarioBasedAns.docx
Week11-Deep Learning Module/: Batch 1 - Coding Solution.ipynb  Batch 1.docx  Batch 2 - Scenario based Q_A.docx  Batch2-Coding_Ans.ipynb  CNN-Digit.ipynb  (+6 more)
Week22-MCP Server/HandsOn/1.mcp-sqlite-langchain-gemini/sqlite_mcp_langchain_gemini/: pyproject.toml  sqlite_mcp_v3.py
(+258 files in other folders)
